<resources>
    <string name="app_name">Media Player App</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="phone">Phone no:</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="save">Create Account</string>
    <string name="youtube_url">YouTube URL: </string>
    <string name="play">PLAY MUSIC</string>
    <string name="play_video">PLAY VIDEO</string>
    <string name="add_to_playlist">ADD TO PLAYLIST</string>
    <string name="my_playlist">MY PLAYLIST</string>
    <string name="audio_url">Audio URL: </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_account">Account</string>
</resources>