<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/buttonPlayVideo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="249dp"
        android:backgroundTint="@color/theme_pink2_light"
        android:text="@string/play_video"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextURL" />

    <TextView
        android:id="@+id/textViewYoutubeURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="231dp"
        android:text="@string/youtube_url"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="309dp"
        android:layout_height="47dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:inputType="text"
        android:text="URL:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYoutubeURL" />

    <Button
        android:id="@+id/buttonPlayMusic"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/theme_pink2_light"
        android:text="@string/play"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlayVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextURL"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAddToPlaylist"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="38dp"
        android:backgroundTint="@color/theme_pink_2"
        android:text="@string/add_to_playlist"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMyPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayVideo" />

    <Button
        android:id="@+id/buttonMyPlaylist"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/theme_pink_1"
        android:text="@string/my_playlist"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddToPlaylist" />

</androidx.constraintlayout.widget.ConstraintLayout>