<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="74dp"
        android:backgroundTint="@color/theme_pink_1"
        android:text="@string/save"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/sConfirmPasswordEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="78dp"
        android:foregroundGravity="center"
        android:text="@string/conf_password"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sPasswordEditText" />

    <EditText
        android:id="@+id/sPasswordEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/sConfirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sUsernameEditText" />

    <EditText
        android:id="@+id/sUsernameEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/sPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameEditText" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="37dp"
        android:background="@color/material_dynamic_neutral50"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/fullNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</androidx.constraintlayout.widget.ConstraintLayout>